Adjust About page paragraph copy, fix stockist list bug (reduce font size of titles on mobile

--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -136,7 +136,7 @@ a:visited.ig-link {
   text-align: center;
   color: var(--white);
   border: 1px solid transparent;
-  letter-spacing: 2px;
+  letter-spacing: 0px;
   border-radius: 0px;
   cursor: pointer;
   user-select: none;
