--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -116,7 +116,7 @@
     padding-bottom: 35px !important;
   }
   .stockist-title {
-    font-size: 23px !important;
+    font-size: 19px !important;
   }
 
 }
